# solana-compliance-hook

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
programs/solana-compliance-hook/: Cargo.toml
programs/solana-compliance-hook/src/: error.rs  lib.rs
programs/solana-compliance-hook/src/instructions/: execute.rs  initialize_extra_metas.rs  manage_list.rs  mod.rs  set_mode.rs
programs/solana-compliance-hook/src/state/: compliance_config.rs  compliance_list.rs  compliance_mode.rs  mod.rs
tests/: compliance.test.ts  utils.ts
