[package]
name = "solana-compliance-hook"
version = "0.1.0"
description = "Solana MiCA-Compliant JIT Transfer Hook"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_compliance_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", default-features = false, features = [
    "token",
    "token_2022",
] }

spl-token-2022 = "8.0.1"
spl-transfer-hook-interface = "0.10.0"
spl-tlv-account-resolution = "0.10.0"
spl-type-length-value = "0.8.0"
spl-token = "8.0.0"

# Force a compatible solana-zk-sdk to resolve dependency conflicts
solana-zk-sdk = "=2.3.13"
